cluster/apps/legacy/proxy/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: legacy-cluster-ingress
  namespace: legacy
subsets:
  - addresses:
      - ip: 192.0.2.101
    ports:
      - name: http
        port: 80
      - name: https
        port: 443
