cluster/apps/legacy/proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: legacy-cluster-ingress
  namespace: legacy
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
