cluster/apps/legacy/proxy/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: legacy-fallback-http
  namespace: legacy
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: kube-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: legacy-cluster-ingress
          port: 80
