cluster/apps/legacy/proxy/tlsroute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: legacy-fallback-tls
  namespace: legacy
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: kube-system
      sectionName: https-passthrough
  rules:
    - backendRefs:
        - name: legacy-cluster-ingress
          port: 443
